introduce integration tests with minimum needed changes
- upgrades jwebunit to latest available version
- downgrades to jquery 1.8.2 and bootstrap 2.0.3 for jwebunit compatibility

--- a/apps/showcase/src/main/webapp/async/index.html
+++ b/apps/showcase/src/main/webapp/async/index.html
@@ -26,6 +26,7 @@
             this.lastIndex = 0;
             this.sendMessage = function(message) {
                 $.ajax({
+                    async: false,
                     url: "sendMessage",
                     data: {
                         message: message
