WW-5362 Removes deprecated language attribute
Co-authored-by: Sebastian Peters <sebastian.peters@gmail.com>

--- a/core/src/site/confluence/ww-template-autoexport.html
+++ b/core/src/site/confluence/ww-template-autoexport.html
@@ -49,7 +49,7 @@ under the License.
         color:                 #666;
       }
     </style>
-    <script language="javascript">
+    <script>
       var hide = null;
       var show = null;
       var children = null;
